# NerineGL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  run_build.sh  setup_build.sh
Shaders/AntiAliasing/: Blit.fs.glsl  FXAA.fs.glsl  TAAResolve.fs.glsl  TAAResolve2.fs.glsl  TAAResolve3.fs.glsl  TAAResolveSimple.fs.glsl
Shaders/Culling/: FrustumCull.cs.glsl
Shaders/FullScreen/: FullScreenQuad.vs.glsl  FullScreenTriangle.vs.glsl
Shaders/Include/: FragmentCalculations.inc.glsl  MaterialData.inc.glsl  PBR.inc.glsl  SceneData.inc.glsl  TAAFrameData.inc.glsl  TransparentFragment.inc.glsl  test
Shaders/PostProcess/: BlurX.fs.glsl  BlurY.fs.glsl  BrightPass.fs.glsl  HDR.fs.glsl  HDRAdaptation.cs.glsl  Luminance.fs.glsl  OIT.fs.glsl  SSAO.fs.glsl  SSAOCombine.fs.glsl  SSR.fs.glsl  ToneMap.fs.glsl
Shaders/Scene/: Mesh.vs.glsl  MeshIBL.fs.glsl  MeshJitter.vs.glsl  MeshOIT.fs.glsl  MeshOITTAA.fs.glsl  MeshTAA.fs.glsl  MeshTAA.vs.glsl  Shadow.fs.glsl  Shadow.vs.glsl
Shaders/Skybox/: Cube.fs.glsl  Cube.vs.glsl
Shaders/Tests/: QuadTex.fs.glsl
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Core/Core/: Logger.cpp  Logger.h  Resource.h  Types.h  Utils.h
Source/Nerine/: CMakeLists.txt  main.cpp
Source/Nerine/Application/: Window.cpp  Window.h
Source/Nerine/Graphics/: Camera.cpp  Camera.h  GLDevice.cpp  GLDevice.h  GLImGui.cpp  GLImGui.h  GLResources.cpp  GLResources.h  RenderScene.cpp  RenderScene.h  RenderUtils.cpp  RenderUtils.h
Source/Programs/: CMakeLists.txt
Source/Programs/EnvMapIrradiance/: CMakeLists.txt  main.cpp
Source/Programs/SceneConverter/: main.cpp
Source/RenderDescription/: CMakeLists.txt
Source/RenderDescription/RenderDescription/: BoundingBox.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Utils.cpp  Utils.h
